--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Cormorant&display=swap');
+    </style>
     <title>React App</title>
   </head>
   <body>
