--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css?family=Cormorant&display=swap');
     </style>
-    <title>React App</title>
+    <title>Pär Strandberg</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
